--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -1,7 +1,6 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:VpdbAgent"
     xmlns:controls="clr-namespace:VpdbAgent.Controls">
 
     <Style TargetType="{x:Type controls:IndeterminateProgress}">
@@ -30,6 +29,23 @@
                             </Grid>
                         </Viewbox>
                     </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="controls:IconControl">
+        <Setter Property="Padding"
+                Value="0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:IconControl">
+                    <Grid Background="{TemplateBinding Background}">
+                        <Path Data="{TemplateBinding DataGeometry}"
+                              Fill="{TemplateBinding Foreground}"
+                              Stretch="Uniform"
+                              Margin="{TemplateBinding Padding}" />
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
