--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VpdbAgent"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:UserControls="clr-namespace:VpdbAgent.Pages"
+        xmlns:c="clr-namespace:VpdbAgent.Controls"
         mc:Ignorable="d"
         ResizeMode="CanResizeWithGrip"
         WindowTitleBrush="{DynamicResource TransparentBrush}"
@@ -23,8 +23,8 @@
 
     <Controls:MetroWindow.IconTemplate>
         <DataTemplate>
-            <Canvas Width="19.885" Height="19.885">
-                <Path Fill="#ffec843d" Data="F1 M 15.100,7.207 C 14.995,8.022 12.911,8.895 9.931,8.895 C 6.962,8.895 4.867,8.022 4.762,7.207 L 4.762,7.137 C 4.762,6.019 7.079,5.111 9.931,5.111 C 12.783,5.111 15.100,6.019 15.100,7.137 L 15.100,7.207 Z M 15.100,10.490 C 14.995,11.305 12.911,12.178 9.931,12.178 C 6.962,12.178 4.867,11.305 4.762,10.490 L 4.762,8.324 C 5.705,9.186 7.870,9.640 9.931,9.640 C 11.992,9.640 14.145,9.186 15.100,8.324 L 15.100,10.490 Z M 15.100,13.342 C 15.100,14.460 12.783,15.368 9.931,15.368 C 7.079,15.368 4.762,14.460 4.762,13.342 L 4.762,11.607 C 5.705,12.469 7.870,12.923 9.931,12.923 C 11.992,12.923 14.145,12.469 15.100,11.607 L 15.100,13.342 Z M 9.943,0.000 C 4.447,0.000 0.000,4.447 0.000,9.943 C 0.000,15.438 4.447,19.885 9.943,19.885 C 15.438,19.885 19.885,15.438 19.885,9.943 C 19.885,4.447 15.426,0.000 9.943,0.000 Z"/>
+            <Canvas>
+                <c:IconControl Height="25" Width="25" Margin="10,10,0,0" Foreground="#ffec843d" Data="{StaticResource IconVpdb}" />
             </Canvas>
         </DataTemplate>
     </Controls:MetroWindow.IconTemplate>
