Local models are now reactive.

--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -23,8 +23,9 @@
             <ItemsControl ItemsSource="{Binding Platforms}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <CheckBox IsChecked="True" Tag="{Binding Name}" Checked="OnPlatformFilterChanged" Unchecked="OnPlatformFilterChanged"
-                                  Content="{Binding Name}" Style="{StaticResource CheckBox}" Margin="10,5,0,0" FontSize="18"/>
+                        <CheckBox IsChecked="True" Tag="{Binding Name}"
+                                  Content="{Binding Name}" Style="{StaticResource CheckBox}" 
+                                  Margin="10,5,0,0" FontSize="18"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
