--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="VpdbAgent.Pages.MainPage"
+﻿<p:BasePage x:Class="VpdbAgent.Pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:VpdbAgent.Pages"
-	  xmlns:controls="clr-namespace:VpdbAgent.Controls"
+      xmlns:p="clr-namespace:VpdbAgent.Pages"
+	  xmlns:c="clr-namespace:VpdbAgent.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="900"
       Title="VPDB Agent">
@@ -20,7 +20,7 @@
         <!-- LEFT PANEL -->
         <StackPanel Grid.Column="0" Orientation="Vertical">
             <Label Content="Systems"/>
-            <ItemsControl ItemsSource="{Binding Platforms}">
+            <ItemsControl x:Name="PlatformList">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <CheckBox IsChecked="True" Tag="{Binding Name}"
@@ -37,14 +37,14 @@
         <!-- RIGHT PANEL -->
         <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
             <ScrollViewer>
-                <ItemsControl ItemsSource="{Binding Games}" Margin="0,10,0,10">
+                <ItemsControl x:Name="GameList" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <controls:GameTemplate Game="{Binding}" Margin="4" />
+                            <c:GameTemplate Game="{Binding}" Margin="4" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
         </Grid>
     </Grid>
-</Page>
+</p:BasePage>
