--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="VpdbAgent.Pages.SettingsPage"
+﻿<Page x:Class="VpdbAgent.Views.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:VpdbAgent.Pages"
+      xmlns:local="clr-namespace:VpdbAgent.Views"
       mc:Ignorable="d" 
       d:DesignHeight="320" d:DesignWidth="400"
       Title="Settings">
