--- a/views/SettingsView.xaml
+++ b/views/SettingsView.xaml
@@ -1,12 +1,11 @@
-﻿<Page x:Class="VpdbAgent.Views.SettingsPage"
+﻿<UserControl x:Class="VpdbAgent.Views.SettingsView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:VpdbAgent.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="320" d:DesignWidth="400"
-      Title="Settings">
+      d:DesignHeight="320" d:DesignWidth="400">
 
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -17,7 +16,7 @@
 
             <!-- API KEY -->
             <Label Content="API Key" HorizontalAlignment="Left" />
-            <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+            <TextBox Text="{Binding ApiKey, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
 
             <!-- PINBALLX/HYPERPIN FOLDER -->
             <Label Content="PinballX Folder" HorizontalAlignment="Left" />
@@ -56,4 +55,4 @@
             <Button x:Name="SubmitButton" Content="Save" Width="75" Click="SubmitButton_Click"/>
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
