--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -32,7 +32,7 @@
 
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
-            <Button Style="{StaticResource IconButton}" Height="30">
+            <Button Style="{StaticResource IconButton}" Click="SettingsButton_Click" Height="30">
                 <StackPanel Orientation="Horizontal">
                     <c:IconControl Height="15" Width="15" Foreground="#80ffffff" Data="{StaticResource IconSettings}" Margin="10,0,10,0" />
                     <TextBlock VerticalAlignment="Center" Text="SETTINGS" Margin="0,0,10,0" />
