Added back/forward button events.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -47,12 +47,12 @@
         </StackPanel>
         <DockPanel Margin="7" >
             <StackPanel Margin="7" Orientation="Horizontal" DockPanel.Dock="Top">
-                <Button Style="{StaticResource NavigationButton}" Command="{x:Static NavigationCommands.BrowseBack}" Margin="0,0,20,0" >
+                <Button Style="{StaticResource NavigationButton}" Click="BackButton_Click" Margin="0,0,20,0" >
                     <Canvas Width="10.119" Height="17.509">
                         <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" Data="F1 M 2.750,8.765 L 10.099,1.375 L 8.724,0.000 L 0.000,8.765 L 8.744,17.509 L 10.119,16.134 L 2.750,8.765 Z"/>
                     </Canvas>
                 </Button>
-                <Button Style="{StaticResource NavigationButton}" Command="{x:Static NavigationCommands.BrowseForward}">
+                <Button Style="{StaticResource NavigationButton}" Click="ForwardButton_Click">
                     <Canvas Width="10.119" Height="17.509">
                         <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" Data="F1 M 7.369,8.744 L 0.020,16.134 L 1.394,17.509 L 10.119,8.744 L 1.375,0.000 L 0.000,1.375 L 7.369,8.744 Z"/>
                     </Canvas>
