--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -24,6 +24,7 @@
                     <DataTemplate>
                         <CheckBox IsChecked="True" Tag="{Binding Name}"
                                   Content="{Binding Name}" Style="{StaticResource CheckBox}" 
+								  Checked="OnPlatformFilterChanged" Unchecked="OnPlatformFilterChanged"
                                   Margin="10,5,0,0" FontSize="18"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
