--- a/Controls/GameTemplate.xaml
+++ b/Controls/GameTemplate.xaml
@@ -15,9 +15,21 @@
 
         <Image x:Name="Thumb" Grid.Column="0" Margin="0,10,0,0" Width="70" Height="70" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         <StackPanel x:Name="Panel" Grid.Column="1">
-            <Label Margin="0,0,0,-10">
-                <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Id}" FontSize="22" FontWeight="Bold"/>
-            </Label>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Margin="0,0,0,-10">
+                    <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Id}" FontSize="22" FontWeight="Bold"/>
+                </Label>
+                <StackPanel x:Name="SyncToggle" Grid.Column="1" Orientation="Horizontal" Margin="0,5,0,0">
+                    <Label Content="SYNC" FontSize="15"/>
+                    <ToggleButton Height="20" Margin="5,0,20,0"/>
+                </StackPanel>
+            </Grid>
+           
 
             <Label x:Name="ReleaseNameWrapper" Margin="0,0,0,-10">
                 <TextBlock x:Name="ReleaseName" TextTrimming="CharacterEllipsis" />
