--- a/Styles/Theme.xaml
+++ b/Styles/Theme.xaml
@@ -7,7 +7,7 @@
         <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}" />
     </Style>
 
-    <Style x:Key="CheckBox" TargetType="{x:Type CheckBox}">
+    <Style TargetType="{x:Type CheckBox}">
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Foreground" Value="#20ffffff" />
@@ -57,6 +57,68 @@
                         <Trigger Property="IsChecked" Value="{x:Null}">
                             <Setter Property="Data" TargetName="Graphic" Value="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z" />
                             <Setter Property="Opacity" TargetName="Graphic" Value="0.56"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <Style TargetType="{x:Type ToggleButton}">
+        <Setter Property="Foreground" Value="{StaticResource PrimaryColorBrush}" />
+        <Setter Property="Background" Value="{StaticResource LabelTextBrush}" />
+        <Setter Property="Template">
+            <Setter.Value>
+
+                <ControlTemplate TargetType="ToggleButton">
+
+                    <Viewbox Stretch="Uniform">
+                        <Canvas Name="Layer_1" Width="20" Height="20" Canvas.Left="10" Canvas.Top="0">
+                            <Ellipse  Canvas.Left="0" Width="20" Height="20" Stroke="{TemplateBinding Background}" StrokeThickness="2" Fill="Transparent">
+                                <Ellipse.Clip>
+                                    <RectangleGeometry Rect="0,0,10,20"/>
+                                </Ellipse.Clip>
+                            </Ellipse>
+                            <Ellipse Canvas.Left="10" Width="20" Height="20" Stroke="{TemplateBinding Background}" StrokeThickness="2" Fill="Transparent">
+                                <Ellipse.Clip>
+                                    <RectangleGeometry Rect="10,0,10,20"/>
+                                </Ellipse.Clip>
+                            </Ellipse>
+                            <Border Canvas.Left="10" Width="10" Height="20" Name="rect416927" Background="Transparent" BorderBrush="{TemplateBinding Background}" BorderThickness="0,2,0,2"/>
+                            <Ellipse x:Name="ellipse" Canvas.Top="4" Canvas.Left="4" Width="12" Height="12" Fill="{TemplateBinding Background}">
+                                <Ellipse.RenderTransform>
+                                    <TranslateTransform X="0" Y="0" />
+                                </Ellipse.RenderTransform>
+                            </Ellipse>
+                        </Canvas>
+                    </Viewbox>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True" >
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetProperty="Background.Color" To="{StaticResource PrimaryColor}" Duration="0:0:0.2" />
+                                        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" To="{StaticResource PrimaryColor}" Duration="0:0:0.2" />
+                                        <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Ellipse.RenderTransform).(TranslateTransform.X)" Storyboard.TargetName="ellipse">
+                                            <SplineDoubleKeyFrame KeyTime="0" Value="0"/>
+                                            <SplineDoubleKeyFrame KeyTime="0:0:0.4" Value="10" KeySpline="0, 1, 0.6, 1"/>
+                                        </DoubleAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetProperty="Background.Color" To="{StaticResource LabelTextColor}" Duration="0:0:0.2" />
+                                        <ColorAnimation Storyboard.TargetProperty="Foreground.Color" To="{StaticResource LabelTextColor}" Duration="0:0:0.2" />
+                                        <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(Ellipse.RenderTransform).(TranslateTransform.X)" Storyboard.TargetName="ellipse">
+                                            <SplineDoubleKeyFrame KeyTime="0" Value="10"/>
+                                            <SplineDoubleKeyFrame KeyTime="0:0:0.3" Value="0" KeySpline="0, 0.5, 0.5, 1"/>
+                                        </DoubleAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
