--- a/Controls/GameTemplate.xaml
+++ b/Controls/GameTemplate.xaml
@@ -25,7 +25,7 @@
                     <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Id}" FontSize="22" FontWeight="Bold"/>
                 </Label>
                 <StackPanel x:Name="SyncToggle" Grid.Column="1" Orientation="Horizontal" Margin="0,5,0,0">
-                    <c:IconControl Height="18" Width="18" Foreground="#80ffffff" Data="{StaticResource IconStar}" Margin="10,-2,12,0" />
+                    <c:IconControl x:Name="Star"  Height="18" Width="18" Foreground="#80ffffff" Data="{StaticResource IconStar}" Margin="10,-2,12,0" />
                     <ToggleButton Height="20" Margin="5,0,20,0"/>
                     <Label Content="SYNC" FontSize="15"/>
                 </StackPanel>
