--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -4,7 +4,6 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:v="clr-namespace:VpdbAgent.Views"
-	  xmlns:c="clr-namespace:VpdbAgent.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="900">
 
@@ -40,7 +39,7 @@
                 <ItemsControl x:Name="GameList" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <c:GameTemplate Game="{Binding}" Margin="4" />
+                            <v:MainGameView Game="{Binding}" Margin="4" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
