--- a/views/MainReleaseResultsView.xaml
+++ b/views/MainReleaseResultsView.xaml
@@ -40,7 +40,7 @@
                 </Grid>
 
                 <!-- result list -->
-                <ItemsControl x:Name="Results" ItemsSource="{Binding Releases}" Margin="0,10,0,10">
+                <ItemsControl x:Name="Results" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,5,10,5">
@@ -50,8 +50,10 @@
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
 
+                                <!-- image -->
                                 <c:UrlImage Grid.Column="0" Width="50" Height="50" UrlSource="{Binding LatestVersion.Thumb.Image.Url}" HorizontalAlignment="Left"/>
 
+                                <!-- data -->
                                 <StackPanel Grid.Column="1" Orientation="Vertical">
                                     <Label Grid.Column="1" Padding="0">
                                         <TextBlock Text="{Binding Game.DisplayName}" TextTrimming="CharacterEllipsis" />
@@ -61,6 +63,7 @@
                                     </Label>
                                 </StackPanel>
 
+                                <!-- select button -->
                                 <Button Style="{StaticResource TertiaryButton}" Grid.Column="2" Content="SELECT" HorizontalAlignment="Right"/>
 
                             </Grid>
