--- a/views/MainReleaseResultsView.xaml
+++ b/views/MainReleaseResultsView.xaml
@@ -40,36 +40,8 @@
                 </Grid>
 
                 <!-- result list -->
-                <ItemsControl x:Name="Results" Margin="0,10,0,10">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Margin="0,5,10,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="60" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
+                <ItemsControl x:Name="Results" Margin="0,10,0,10"/>
 
-                                <!-- image -->
-                                <c:UrlImage Grid.Column="0" Width="50" Height="50" UrlSource="{Binding LatestVersion.Thumb.Image.Url}" HorizontalAlignment="Left"/>
-
-                                <!-- data -->
-                                <StackPanel Grid.Column="1" Orientation="Vertical">
-                                    <Label Padding="0">
-                                        <TextBlock Text="{Binding Game.DisplayName}" TextTrimming="CharacterEllipsis" />
-                                    </Label>
-                                    <Label Padding="0">
-                                        <TextBlock Text="{Binding Name}" TextTrimming="CharacterEllipsis" />
-                                    </Label>
-                                </StackPanel>
-
-                                <!-- select button -->
-                                <Button x:Name="SelectButton" Style="{StaticResource TertiaryButton}" Grid.Column="2" Content="SELECT" HorizontalAlignment="Right"/>
-
-                            </Grid>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
             </StackPanel>
         </Grid>
     </Expander>
