--- a/views/MainView.xaml
+++ b/views/MainView.xaml
@@ -4,7 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:v="clr-namespace:VpdbAgent.Views"
+      xmlns:vm="clr-namespace:VpdbAgent.ViewModels"
       xmlns:rx="clr-namespace:ReactiveUI;assembly=ReactiveUI"
+      xmlns:dc="clr-namespace:Devart.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="900">
 
@@ -36,9 +38,28 @@
 
         <!-- RIGHT PANEL -->
         <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
-            <ScrollViewer>
-                <ItemsControl x:Name="GameList" Margin="0,10,0,10" />
-            </ScrollViewer>
+
+            <ItemsControl x:Name="GameList"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ItemsControl.Template>
+                    <ControlTemplate>
+                        <ScrollViewer KeyboardNavigation.IsTabStop="True" CanContentScroll="True">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </ItemsControl.Template>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <dc:SmoothPanel>
+                            <dc:SmoothPanel.Templates>
+                                <dc:SmoothPanelTemplate ViewModel="{x:Type vm:MainGameViewModel}" View="{x:Type v:MainGameView}" />
+                            </dc:SmoothPanel.Templates>
+                        </dc:SmoothPanel>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+
         </Grid>
     </Grid>
 </UserControl>
